# asi-chat-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.server  alembic.ini  app.py  assistant.py  clean_chats.py  cloudbuild.server.yaml  db.py  kb.py  notifier.py  pyproject.toml  qa_patterns.md  server.py  system_prompt.md
.claude/: settings.json
alembic/: env.py
knowledge_base/: _internal_notes.md  bot_menu.md  login_password_email.md  payments.md  pricing.md  refunds.md  renewal_and_cancellation.md  reports.md  suspension.md  team_actions.md  users_likes_blocks.md
scripts/: clean_chats.py
src/sugarbot/: __init__.py  assistant.py  db.py  kb.py  server.py  system_prompt.md
src/sugarbot/knowledge_base/: account_and_plans.md  account_deletion.md  account_labels.md  bot_menu.md  canned_messages.md  login_password_email.md  messaging.md  missing_features.md  photos.md  profile_verification.md  refunds.md  renewal_and_cancellation.md  reports.md  suspension.md
src/sugarbot/migrations/: env.py
src/sugarbot/migrations/versions/: 0001_initial_schema.py  0002_conversation_state.py  0003_conversation_escalated_at.py
tests/: smoke_account_flow.py  smoke_idle_sweep.py  smoke_repair_tool_calls.py
ui/: app.py
