[project]
name = "sugar-daddy-assistant"
version = "0.1.0"
description = "Customer-service assistant for sugardaddy.co.il"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "openai>=1.50.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.39.0",
    "uvicorn[standard]>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sugarbot"]
